# minips

./: 02.hello.text  05.fibo.asm  06.collatz.asm  06.collatz.data  07.loadstore.asm  07.loadstore.data  08.sort.data  README.md  collatz.txt  exemplo_entrada_saida.txt  minips.cabal  mips1.txt  quicksort  quicksort.c  stack.yaml
res/: 01.soma.asm  02.hello.asm  03.input.asm  03.input.data  04.branches.asm  04.branches.text  05.fibo.asm  05.fibo.text  06.collatz.asm  06.collatz.text  07.loadstore.asm  07.loadstore.text  08.sort.asm  08.sort.text  09.contador.asm  09.contador.text  10.hello++.asm  10.hello++.data  10.hello++.text  11.surpresinha.asm  11.surpresinha.data  11.surpresinha.text  12.branch_delay_slot.asm  12.branch_delay_slot.data  12.branch_delay_slot.text  13.arit.c  13.arit.data  13.arit.elf  13.arit.rodata  13.arit.text  14.flutuantes.asm  14.flutuantes.data  14.flutuantes.text  15.pi.c  15.pi.elf  15.pi.rodata  15.pi.text  16.automato.c  16.automato.elf  16.automato.rodata  (+9 more)
resources/: 01.soma.asm  01.soma.text  02.hello.data  03.input.asm  03.input.text  04.branches.asm  04.branches.data  04.branches.text  05.fibo.data  05.fibo.text  06.collatz.text  07.loadstore.text  08.sort.asm  08.sort.text
src/: Architecture.hs  Constants.hs  Emulator.hs  InstrDecoder.hs  Main.hs  MemoryConfig.hs  MemoryElement.hs  MemoryHierarchy.hs  Minips.hs  MinipsST.hs  Runtime.hs  RuntimeST.hs  Utils.hs
